# DataPrism

./: .gitignore  README.md  pyproject.toml  项目方案_DataPrism.md
configs/: default.yaml  phase1_tracin.yaml  phase2_importance.yaml  phase3_multieval.yaml
configs/baseline/: dsir.yaml  full_data.yaml  less.yaml  rho_loss.yaml  uniform.yaml
configs/data/: alpaca.yaml  openorca.yaml  wizardlm.yaml
configs/lora/: default.yaml
configs/model/: llama3_8b.yaml  qwen2.5_7b.yaml
dataprism/: __init__.py
dataprism/config/: __init__.py  dataclass.py  loader.py
dataprism/core/: __init__.py  base_selector.py  registry.py  types.py
dataprism/data/: __init__.py  dataset.py  streaming_pool.py  validation_sets.py
dataprism/evaluation/: __init__.py  alpaca_eval.py  gsm8k_eval.py  humaneval_eval.py  mmlu_eval.py  mt_bench_eval.py
dataprism/influence/: __init__.py  checkpoint_manager.py  gradient_collector.py  influence_store.py  tracin_cp.py
dataprism/models/: __init__.py  gradient_hooks.py  lora_manager.py  model_registry.py
dataprism/pipeline/: __init__.py  full_pipeline.py  phase1_pipeline.py  phase2_pipeline.py  phase3_pipeline.py
dataprism/sampling/: __init__.py  importance_sampler.py  variance_tracker.py  (+1 more)
docs/: baselines.md  configuration.md  full_pipeline.md  phase1_tracin.md  phase2_sampling.md  phase3_reselection.md
scripts/: prepare_data.py  run_baselines.py  run_evaluation.py  run_phase1_tracin.py  run_phase2_sampling.py  run_phase3_reselect.py  run_pipeline.py
tests/: conftest.py  test_config.py  test_pipeline.py  test_sampling.py  test_selectors.py
(+17 files in other folders)
